feat: add kafka integration

--- a/internal/services/hub_submitter/config/config.development.json
+++ b/internal/services/hub_submitter/config/config.development.json
@@ -6,5 +6,9 @@
     "basePath": "api/rest",
     "timeout": 15,
     "host": "localhost"
+  },
+  "logger": {
+    "level": "debug",
+    "format": "console"
   }
 }
