--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,22 @@
+# Postgres
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
+# Shared
+ENV=
+
+# Hub_submitter
 HUBSUBMITTER_DATABASE_PASSWORD=
 HUBSUBMITTER_DATABASE_USER=
 HUBSUBMITTER_DATABASE_URL=
 HUBSUBMITTER_DATABASE_SCHEMA=
+HUBSUBMITTER_KAFKA_ADDR=
+HUBSUBMITTER_SERVICE_NAME=
+HUBSUBMITTER_HTTP_PORT=
+HUBSUBMITTER_HTTP_BASEPATH=
+HUBSUBMITTER_HTTP_TIMEOUT=
+HUBSUBMITTER_HTTP_HOST=
 
+# Tofu
+TOFU_KAFKA_HOSTS=infra-kafka:9092
