--- a/.env.template
+++ b/.env.template
@@ -7,12 +7,16 @@ POSTGRES_PASSWORD=
 ENV=
 
 # Hub_submitter
+HUBSUBMITTER_SERVICE_NAME=
+HUBSUBMITTER_CONFIG_PATH=
+# Hub_submitter : DB
 HUBSUBMITTER_DATABASE_PASSWORD=
 HUBSUBMITTER_DATABASE_USER=
 HUBSUBMITTER_DATABASE_URL=
 HUBSUBMITTER_DATABASE_SCHEMA=
+# Hub_submitter : Kafka
 HUBSUBMITTER_KAFKA_ADDR=
-HUBSUBMITTER_SERVICE_NAME=
+# Hub_submitter : HTTP
 HUBSUBMITTER_HTTP_PORT=
 HUBSUBMITTER_HTTP_BASEPATH=
 HUBSUBMITTER_HTTP_TIMEOUT=
