feat: complete initialize kafka cluster, tidy consumer logic

--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,9 @@ POSTGRES_PASSWORD=
 # Shared
 ENV=
 
+# Kafka
+KAFKA_CLUSTER_ID=
+
 # Hub_submitter
 HUBSUBMITTER_SERVICE_NAME=
 HUBSUBMITTER_CONFIG_PATH=
@@ -16,11 +19,11 @@ HUBSUBMITTER_DATABASE_URL=
 HUBSUBMITTER_DATABASE_SCHEMA=
 # Hub_submitter : Kafka
 HUBSUBMITTER_KAFKA_ADDR=
+HUBSUBMITTER_KAFKA_CONSUME_GROUPID=
 # Hub_submitter : HTTP
 HUBSUBMITTER_HTTP_PORT=
 HUBSUBMITTER_HTTP_BASEPATH=
 HUBSUBMITTER_HTTP_TIMEOUT=
 HUBSUBMITTER_HTTP_HOST=
-
 # Tofu
 TOFU_KAFKA_HOSTS=infra-kafka:9092
