--- a/internal/services/hub_submitter_service/resources/config/config.development.yaml
+++ b/internal/services/hub_submitter_service/resources/config/config.development.yaml
@@ -27,7 +27,9 @@ kafka:
       async: false
       batchSize: 10
       batchTimeout: 100
+# TODO: в качестве консюмер группы не юзать имя сервиса
   consume:
+    groupId: "${KAFKA_CONSUME_GROUPID}"
     consumers:
       notificationSender_sentEvent:
         topic: notification-sender.sent-event
