--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -3,9 +3,29 @@ services:
     ports:
       - "5432:5432"
   infra-kafka:
+    deploy:
+      resources:
+        limits:
+          cpus: "0.7"
     image: apache/kafka
     ports:
       - "9092:9092"
+  infra-kafka2:
+    deploy:
+      resources:
+        limits:
+          cpus: "0.7"
+    image: apache/kafka
+    ports:
+      - "9093:9092"
+  infra-kafka3:
+    deploy:
+      resources:
+        limits:
+          cpus: "0.7"
+    image: apache/kafka
+    ports:
+      - "9094:9092"
   infra-tofu:
     build:
       context: deploy/tofu
