--- a/internal/services/hub_submitter_service/resources/config/config.development.yaml
+++ b/internal/services/hub_submitter_service/resources/config/config.development.yaml
@@ -30,19 +30,14 @@ kafka:
   # TODO: в качестве консюмер группы не юзать имя сервиса
   fetching:
     groupId: "${KAFKA_FETCHING_GROUPID}"
-messaging: {
-  routing: {
-    kafka: {
-      input: {
-        notificationSender_sentEvent: {
+messaging:
+  routing:
+    kafka:
+      input:
+        notificationSender_sentEvent:
           vendorKey: notification-sender.sent-event
-        }
-      },
-      output: {
-      }
-    }
-  }
-}
+      output: { }
 inbox:
   put: { }
-  poll: { }
+  unbox:
+    maxWorkers: 4
